Dunno what I did here --- some uncomitted changes I apparently had lying around

--- a/app/static/index.html
+++ b/app/static/index.html
@@ -4,7 +4,7 @@
     <script src="index.js" defer></script>
 </head>
 <body>
-    <h1>Pixelflut-rs</h1>
-    <canvas id="canvas" width="1280" height="720" style="background-color: black; width: 100%"></canvas>
+<h1>Pixelflut-rs</h1>
+<canvas id="canvas" width="1280" height="720" style="width: 98% !important;"></canvas>
 </body>
 </html>
